--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -879,7 +879,7 @@
                     </div>
                     <!-- /ko -->
 
-                    <!--ko if: selectedTabName() === 'caseFile' && $root.authorization.ok("permanent-archive-enabled") && $root.authorization.ok('tos-operations-enabled') -->
+                    <!--ko if: selectedTabName() === 'caseFile' && $root.authorization.ok("permanent-archive-enabled") && $root.authorization.ok('tos-operations-enabled') && application.id -->
                     <div id="application-caseFile-tab" class="tab-content">
                       <div>
                         <div data-bind="component: {name: 'case-file', params: {application: application}}"></div>
