--- a/resources/private/ui-components/review-tasks/review-tasks-template.html
+++ b/resources/private/ui-components/review-tasks/review-tasks-template.html
@@ -16,7 +16,8 @@
         </tr>
       </thead>
       <tbody data-bind="foreach: reviews">
-        <tr data-test-type="task-katselmus">
+        <tr data-test-type="task-katselmus"
+            data-bind="attr: {'data-test-index': $index}">
           <td class="reviews-table--icons" data-bind="if: hasAttachments">
             <i class="lupicon-paperclip"></i></td>
           <td><a data-bind="text: name,
@@ -31,10 +32,15 @@
           </td>
           <td data-bind="if: notes" class="reviews-table--action">
             <a data-bind="ltext: 'review.show-notes',
+                          attr: {'data-test-id': 'show-review-note-' + $index},
                           toggleClick: notesVisible"></a></td>
         </tr>
         <!-- ko if: notesVisible -->
-        <tr class="reviews-table__note"><td colspan="7" data-bind="text: notes"></td></tr>
+        <tr class="reviews-table__note">
+          <td colspan="7"
+              data-bind="text: notes,
+                         attr: {'data-test-id': 'review-note-' + $index}"></td>
+        </tr>
         <tr></tr>
         <!-- /ko -->
       </tbody>
