--- a/resources/private/application/archival-summary-template.html
+++ b/resources/private/application/archival-summary-template.html
@@ -44,8 +44,7 @@
 
     <!-- ko if: $root.tosFunctions().length > 0 && $root.authorization.ok("force-fix-tos-function-for-application") -->
       <div class="tos-function-correction">
-        <!-- ko if: features.enabled('tos-function-correction') -->
-        <div class="feature">
+        <div>
           <h2 data-bind="ltext: 'tos.function.fix'"></h2>
           <p data-bind="ltext: 'tos.function.fix.guide'"></p>
           <div>
@@ -68,7 +67,6 @@
              </div>
            </div>
         </div>
-        <!-- /ko -->
       </div>
     <!-- /ko -->
   </script>
